<resources>
    <string name="app_name">Stepbook</string>
    <string name="placeholder_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="view">View</string>
    <string name="add_to_my_list">Add to my list</string>
    <string name="take_note_of_excercise">Enter Datapoint</string>
    <string name="my_workouts">My Workouts</string>
    <string name="exercises">All exercises</string>
    <string name="create_a_workout">Create a workout</string>
    <string name="create_exercise">Create Exercise</string>
    <string name="view_public_workouts">View Public Workouts</string>
    <string name="view_tracked_exercises">View Tracked Exercises</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="remove_from_list">Remove</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="add_workout_unit">Add Workout Unit</string>
    <string name="choose">Choose</string>
    <string name="remove">Remove</string>
    <string name="save_workout">Save workout</string>
    <string name="publish_workout">Publish workout</string>
    <string name="remove_point">Remove Point</string>
    <string name="you_didnt_add_any_workouts_yet">You didn\'t add any workouts yet…</string>
    <string name="you_didnt_track_any_exercises_yet">You didn\'t track any exercises yet…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_2500">/2500</string>
    <string name="_0">0</string>
    <string name="add_photo">Foto hinzufügen</string>
    <string name="take_photo">Foto machen</string>
    <string name="from_gallery">Aus Gallerie</string>
    <string name="accept_photo">Foto zur Gallerie hinzufügen</string>
    <string name="choose_weight">Gewicht in Kg angeben</string>
</resources>
