<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/my_workouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_workouts"/>
    <Button
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_workouts"
        android:id="@+id/my_exercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_exercises"/>
    <Button
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_exercises"
        android:id="@+id/create_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_workout"/>
    <Button
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_workout"
        android:id="@+id/create_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_exercise"/>
    <Button
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_exercise"
        android:id="@+id/view_public_workouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_public_workouts"/>
    <Button
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_public_workouts"
        android:id="@+id/view_tracked_exercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_tracked_exercises"/>

</androidx.constraintlayout.widget.ConstraintLayout>